--- a/styles/Jogo.module.css
+++ b/styles/Jogo.module.css
@@ -43,5 +43,6 @@
 @media screen and (max-width: 880px) {
     #jogo {
         height: auto;
+        margin-bottom: 8px;
     }
 }
